example-app-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-1
  labels:
    app: example-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app-1
  template:
    metadata:
      labels:
        app: example-app-1
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
