example-app-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-1
spec:
  selector:
    app: example-app-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
